Mise en place formulaire de création d'article + layout d'affichage d'article

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,8 +1,11 @@
 :root {
-    --primary: #6a89cc;
+    --primary: #6c5ce7;
     --primary-dark: #4a69bd;
+    --validation: #00b894;
+    --annulation: #ff7675;
     --accent:#3c6382;
     --text: #333;
+    --dark-grey: #2d3436;
     --divider: #ecf0f1;
     --font-family: 'Comic Neue', cursive;
     --box-shadow: 0 1px 2px 0 rgba(60,64,67,.3), 0 1px 3px 1px rgba(60,64,67,.15);; 
