--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
         .article {
             background: white;
             padding: 0 5rem;
+            margin-bottom: 5rem;
             border-radius: 0.3rem;
             display: flex;
             flex-direction: column;
@@ -32,6 +33,7 @@
             }
             &-content {
                 max-width: 550px;
+                white-space: pre-line;
             }
             &-actions {
                 display: flex;
