--- a/src/form/form.scss
+++ b/src/form/form.scss
@@ -6,7 +6,7 @@
 
 
     form {
-        width: 700px;
+        width: 100%;
         padding: 4rem;
         box-shadow: var(--box-shadow);
         border-radius: 3px;
