Ajout d'eventlistener sur button pour navigation lors de validation ou d'annulation + mise en place de la partie édition pour les articles existants

--- a/src/form/form.scss
+++ b/src/form/form.scss
@@ -24,6 +24,10 @@
                 margin-bottom: 1rem;
             }
         }
+        #errors {
+            margin: 1rem 0;
+            font-weight: 700;
+        }
         input, textarea {
             border: 1px solid var(--divider);
             padding: 1rem;
